# clockr

./: Cargo.toml  README.md
.zed/: settings.json
libs/models/: Cargo.toml  README.md
libs/models/src/: etl.rs  lib.rs  time_log.rs  user.rs  user_overview.rs
libs/twilio/src/: lib.rs
migrations/: 20250223042432_add_time_log_and_use_ulid.sql
public/: site.webmanifest
src/: app.rs  app_state.rs  error.rs  error_template.rs  fileserv.rs  jobs.rs  lib.rs  main.rs  user.rs  user_session.rs  utils.rs
src/app/: phone_number.rs
src/components/: adjustment.rs  app_context.rs  app_error_boundry.rs  check_in.rs  entry.rs  icon.rs  loading_progress.rs  menu.rs  mod.rs  pinpad.rs  session.rs  session_form.rs  show_error.rs  time_view.rs  timesheet.rs  user_form.rs
src/functions/: add_time.rs  delete_time.rs  magic_link_sign_in.rs  mod.rs  user.rs
src/jobs/: daily.rs  hourly.rs  monthly.rs  weekly.rs
src/models/: adjustments.rs  corrections.rs  location_trackers.rs  magic_link.rs  mod.rs  pins.rs  sessions.rs  time_log.rs  time_sheets.rs  user.rs  user_today.rs
src/screens/: authenticate.rs  clock_in_link.rs  dashboard.rs  home.rs  magic_link.rs  mod.rs  settings.rs  timesheet.rs  timesheets.rs  users.rs  vacations.rs
src/service/: sms.rs
style/: landing.css  main.css
